--- a/src/index.html
+++ b/src/index.html
@@ -5,32 +5,317 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link
+		href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap"
+		rel="stylesheet">
 	<title>TailwindCSS-PostCSS</title>
 	<link href="./assets/css/styles.css" rel="stylesheet">
 </head>
 
-<body>
-	<div class="container mx-auto">
-		<h1 class="mt-6 mb-6 text-6xl text-red-700">TailwindCSS setup completed</h1>
-		<p>Version: 0.0.2</p>
-		<a href="about.html">About</a>
-		<h2 class="mt-6 mb-6 text-3xl">Sart your amazing work in index.html</h2>
-		<h2 class="mt-6 mb-6 text-3xl text-blue-700">BENEFITS</h2>
+<body style="background: #fdfbfb;">
+	<!-- Header Menu -->
+	<header class="bg-black p-2">
+		<div class="flex">
+			<div>
+				<span class="bg-white block h-px mt-2 w-5"></span>
+				<span class="bg-white block h-px my-1 w-5"></span>
+				<span class="bg-white block h-px w-5"></span>
+			</div>
+			<div class="text-white mx-auto">
+				<h1 class="xl:ml-72 lg:ml-60 md:ml-48 font-workSans text-2xl">LOGO</h1>
+			</div>
+			<div class="ml-auto">
+				<a href="#"><i class="fas fa-search text-white mr-2"></i></a>
+			</div>
+		</div>
+	</header>
+	<nav>
+		<ul
+			class="bg-gray-600 flex w-full md:w-1/2 mx-auto text-white p-2 md:rounded-bl-2xl md:rounded-br-2xl rounded-bl-none rounded-br-none justify-between px-0 md:px-6 text-xs md:text-base">
+			<li><a href="#">Mexcio</a></li>
+			<li><a href="#">Colombia</a></li>
+			<li><a href="#">Peru</a></li>
+			<li><a href="#">Chile</a></li>
+			<li><a href="#">Centroamerica</a></li>
+			<li><a href="#">REP. Dominicana</a></li>
+		</ul>
+	</nav>
 
+	<!-- Google Add Section -->
+	<section class="mb-4">
+		<div class="container mx-auto mt-6">
+			<div>
+				<h1 class="w-1/2 bg-red-400 h-40 mx-auto"></h1>
+			</div>
+		</div>
+	</section>
+	<!-- Hero Section -->
+	<section>
+		<div class="ml-16">
+			<h1>Edición en Español</h1>
+		</div>
+		<div class="mx-16 mt-3 mb-9">
+			<hr class="h-0.5 bg-gray-500" />
+		</div>
+		<div class="container mx-auto">
+			<div class="-ml-4">
+				<span class="px-6 py-2 bg-red-500 text-white">Breaking</span>
+			</div>
+			<div class="flex -ml-6">
+				<div class="h-28 pr-2 m-2 border-r-2 flex items-center border-gray-400">
+					<p class="text-xs">Dispositivos vanguardistas reconocidos por facilitar
+						nuestro estilo de vida</p>
+				</div>
+				<div class="h-28 pr-2 m-2 border-r-2 flex items-center border-gray-400">
+					<p class="text-xs">Alberto Ciurana, ejecutivo de TV Azteca,
+						muere de Covid-19</p>
+				</div>
+				<div class="h-28 pr-2 m-2 border-r-2 flex items-center border-gray-400">
+					<p class="text-xs">Slim va por recompra de acciones de América
+						Móvil con fondo de 25,000 mdp</p>
+				</div>
+				<div class="flex items-center">
+					<p class="text-xs">Estas son las ciudades en la mira de Ikea
+						para expandirse en México</p>
+				</div>
+			</div>
+			</div>
 
-		<ol class="ml-10 list-decimal">
-			<li>Zero Setup</li>
-			<li>Live Reloads</li>
-			<li>Github pages ready</li>
+	</section>
+	<!-- Ultimas Noticicas Section -->
+	<section>
+		<div class="mx-16 mt-3 mb-9">
+			<hr class="h-0.5 bg-gray-500" />
+		</div>
+		<div class="container mx-auto flex">
+			<div class="w-2/3">
+				<div>
+					<div class="text-center bg-white border-r-2 border-gray-200 pr-2">
+						<img src="./assets/img/newsimg/tjz7c-dcrma103.jpg" alt="">
+						<h1 class="text-2xl font-merriWeather py-2 px-16">Morena no ha dado la mitad de su
+							presupuesto
+							para
+							vacunas como lo prometió</h1>
+						<p class="text-xs font-merriWeather">Por <strong>Staff</strong> l marzo 24, 2021</p>
+						<p class="text-xs font-merriWeather my-2"><strong>en Méx</strong>ico</p>
+					</div>
+					<div class="flex mt-1">
+						<div class="w-1/2 m-1 pr-4">
+							<img src="./assets/img/newsimg/tjz7c-dcrma105.jpg" alt="">
+							<div class="px-2 py-3">
+								<h1 class="font-merriWeather">Bitcoin, Tesla, GameStop y otras señales
+									de que la recuperación de mercados
+									será la más rápida de la historia</h1>
+								<div class="mt-8">
+									<p class="text-xs font-merriWeather">Por <strong>Staff</strong> l marzo 24, 2021</p>
+									<p class="text-xs font-merriWeather my-2"><strong>en Méx</strong>ico</p>
+								</div>
+							</div>
+						</div>
+						<div class="w-1/2 m-1 pl-4">
+							<img src="./assets/img/newsimg/tjz7c-dcrma105.jpg" alt="">
+							<div class="px-2 py-3">
+								<h1 class="font-merriWeather">Como AMLO, Sheinbaum venderá
+									inmuebles decomisados al crimen</h1>
+								<div class="mt-8">
+									<p class="text-xs font-merriWeather">Por <strong>Staff</strong> l marzo 24, 2021</p>
+									<p class="text-xs font-merriWeather my-2"><strong>en Méx</strong>ico</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="w-1/3 bg-white pl-1 ml-2">
+				<div class="text-center">
+					<h1 class="text-3xl text-black font-workSans font-bold">Últimas noticias</h1>
+				</div>
+				<div>
+					<div class="flex p-4">
+						<img src="./assets//img/newsimg/tjz7c-dcrma19.jpg" class="p-4 h-1/2">
+						<div class="py-2 px-4">
+							<h1 class="text-2xl font-merriWeather">AMLO asegura que
+								“todos” los migrantes en México
+								serán vacunados</h1>
+							<a href="#" class="text-xs"> Hace 6 horas</a>
+						</div>
+					</div>
+					<div class="flex p-4">
+						<img src="./assets//img/newsimg/tjz7c-dcrma19.jpg" class="p-4 h-1/2">
+						<div class="py-2 px-4">
+							<h1 class="text-2xl font-merriWeather">El príncipe Harry
+								trabajará en una
+								startup de salud
+								mental</h1>
+							<a href="#" class="text-xs"> Hace 6 horas</a>
+						</div>
+					</div>
+					<div class="flex p-4">
+						<img src="./assets//img/newsimg/tjz7c-dcrma19.jpg" class="p-4 h-1/2">
+						<div class="py-2 px-4">
+							<h1 class="text-2xl font-merriWeather">Peso cae 1.15%;
+								BMV retrocede por
+								bajos precios del
+								petróleo</h1>
+							<a href="#" class="text-xs"> Hace 6 horas</a>
+						</div>
+					</div>
+					<div class="flex p-4">
+						<img src="./assets//img/newsimg/tjz7c-dcrma20.jpg" class="p-4 h-1/2">
+						<div class="py-2 px-4">
+							<h1 class="text-2xl font-merriWeather">Nuevo acuerdo entre México y la Unión Europea
+								estará
+								listo a fina-
+								les de 2021</h1>
+							<a href="#" class="text-xs"> Hace 6 horas</a>
+						</div>
+					</div>
 
-		</ol>
-		<p class="mt-10">
-			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto minus libero a quas praesentium dolores
-			inventore fugit, cumque quibusdam facilis incidunt? Pariatur reiciendis voluptatem ipsam at! Sequi fugit eum
-			voluptates.
-		</p>
-	</div>
+				</div>
+				</div>
+				</div>
+				</section>
+				<!-- Quote Section -->
+				<section class="container mx-auto bg-black h-52 flex">
+					<div class="mx-auto mt-12">
+						<p class="text-white font-merriWeather text-2xl">“Creo que siempre nos estamos convirtiendo en la mujer que
+							queremos ser”.</p>
+						<p class="text-white text-center text-lg mt-6">Cleo Wade, escritora y activista</p>
+						<p class="text-workSans text-gray-500 text-center text-xs mt-5">COMPARTIR</p>
+					</div>
+				</section>
+				<!-- Social Info Section -->
+				<section class="container my-4 mx-auto">
+					<hr>
+					<div class="flex p-4">
+						<div>
+							<h1 class="text-gray-400 text-sm">REDES SOCIALES DE FORBES</h1>
+						</div>
+						<div class="mx-auto">
+							<p class="text-xl font-merriWeather text-gray-600">Alimentando tu pienso con exito.</p>
+						</div>
+						<div>
+							<i class="mx-4 text-gray-500 fa fa-facebook"></i>
+							<i class="mx-4 text-gray-500 fa fa-twitter"></i>
+							<i class="mx-4 text-gray-500 fa fa-instagram"></i>
+							<i class="mx-4 text-gray-500 fa fa-linkedin"></i>
+							<i class="mx-4 text-gray-500 fa fa-youtube"></i>
+						</div>
+					</div>
+					<hr>
+				</section>
+				<!--Dinero Section Heading-->
+				<section class="mx-auto w-full bg-white">
+					<div class="py-4 flex items-end container mx-auto">
+						<div class="mr-3">
+							<h1 class="text-5xl font-bold font-workSans">Dinero</h1>
+						</div>
+						<div class="w-full bg-green-400 h-1 mb-2"></div>
+					</div>
+				</section>
 
+	<!-- Dienro Section -->
+	<section>
+		<div class="container flex mx-auto">
+			<div class="w-2/3">
+				<div>
+					<div class="text-center border-r-0.5 border-gray-400  p-2">
+						<img src="./assets/img/newsimg/tjz7c-dcrma103.jpg" alt="">
+						<h1 class="text-3xl font-merriWeather py-2 px-16">Jornada Notarial 2021: ¿sabías que puedes
+							ahorrar hasta 35 mil pesos en escrituración?
+						</h1>
+						<p class="text-xs font-merriWeather">Por <strong>Staff</strong> l marzo 24, 2021</p>
+						<p class="text-xs font-merriWeather my-2"><strong>en Méx</strong>ico</p>
+					</div>
+					<hr>
+					<div class="flex p-2">
+						<div class="w-1/2 border-r-2 border-gray-300">
+							<div class="flex p-1">
+								<img src="./assets//img/newsimg/tjz7c-dcrma20.jpg" class="p-4 h-1/2">
+								<div class="py-2 px-2">
+									<h1 class="text-xl font-merriWeather">Conoce dos diferentes vehículos de inversión
+										que han ganado mucha..</h1>
+									<a href="#" class="text-xs"> Hace 6 horas</a>
+								</div>
+							</div>
+							<div class="flex p-1">
+								<img src="./assets//img/newsimg/tjz7c-dcrma20.jpg" class="p-4 h-1/2">
+								<div class="py-2 px-2">
+									<h1 class="text-xl font-merriWeather">No existe victoria sin sacrificio. En el
+										ajedrez y
+										en la
+										economía es aplicable..</h1>
+									<a href="#" class="text-xs"> Hace 6 horas</a>
+								</div>
+							</div>
+						</div>
+						<div class="w-1/2">
+							<div class="flex p-1">
+								<img src="./assets//img/newsimg/tjz7c-dcrma20.jpg" class="p-4 h-1/2">
+								<div class="py-2 px-2">
+									<h1 class="text-xl font-merriWeather">Todos tenemos un potencial financiero oculto
+										que
+										no conocemos...</h1>
+									<a href="#" class="text-xs"> Hace 6 horas</a>
+								</div>
+							</div>
+							<div class="flex p-1">
+								<img src="./assets//img/newsimg/tjz7c-dcrma20.jpg" class="p-4 h-1/2">
+								<div class="py-2 px-2">
+									<h1 class="text-xl font-merriWeather">Todos tenemos un potencial financiero oculto
+										que
+										no conocemos...</h1>
+									<a href="#" class="text-xs"> Hace 6 horas</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="w-1/3">
+				<div>
+					<div class="p-2">
+						<img src="./assets/img/newsimg/tjz7c-dcrma92.jpg" class="ml-2 pl-2">
+						<div class="p-4">
+							<h1 class="text-xl font-merriWeather">
+								Conoce la historia de Sophia Amoruso ganando y perdiendo dinero en el mundo de la ropa y
+								los
+								accesorios. Hay algo que
+								ap...
+							</h1>
+							<div class="mt-8">
+								<p class="text-xs font-merriWeather">Por <strong>Staff</strong> l marzo 24, 2021</p>
+								<p class="text-xs font-merriWeather my-2"><strong>en Méx</strong>ico</p>
+							</div>
+						</div>
+					</div>
+					<div class="p-2 mt-6">
+						<img src="./assets/img/newsimg/tjz7c-dcrma92.jpg" class="ml-2 pl-2">
+						<div class="p-4">
+							<div class="mt-4">
+								<p class="text-xs font-merriWeather">Por <strong>Staff</strong> l marzo 24, 2021</p>
+								<p class="text-xs font-merriWeather my-2"><strong>en Méx</strong>ico</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Video Heading Section -->
+	<section>
+		<div class="py-4 flex items-end container mx-auto">
+			<div class="mr-3">
+				<h1 class="text-5xl font-bold font-workSans">Video</h1>
+			</div>
+			<div class="w-full bg-purple-600 h-1 mb-2"></div>
+		</div>
+	</section>
+	
+	<section></section>
+
+	<script src="https://kit.fontawesome.com/ede2fe071e.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
