--- a/src/index.html
+++ b/src/index.html
@@ -90,8 +90,9 @@
 		</div>
 		<div class="container mx-auto md:flex flex-none">
 			<div class="md:w-2/3 w-full">
-				<div class="border-none lg:border-r-2 ml-3 border-gray-700">
-					<div class="text-center bg-white md:pr-2 md:px-0 px-1 p-0">
+				<div>
+					<div class="text-center bg-white md:pr-2 md:px-0 px-1 p-1 md:border-r-2 ml-3 border-gray-700
+																																					">
 						<img src="https://picsum.photos/900/400" alt="">
 						<h1 class="md:text-2xl text-xl font-merriWeather font-bold py-2 px-0 md:px-20">Morena no ha dado
 							la
@@ -249,7 +250,7 @@
 			</div>
 		</div>
 		<hr class="md:block hidden">
-		</section>
+	</section>
 	<!--Dinero Section Heading-->
 	<section class="mx-auto w-full bg-white">
 		<div class="py-4 flex items-end container mx-auto">
@@ -263,7 +264,7 @@
 	<section>
 		<div class="container md:flex flex-none mx-auto">
 			<div class="md:w-2/3 w-full">
-				<div class="border-r-2 ml-3 border-gray-200">
+				<div class="border-r-0 md:border-r-2 ml-3 border-gray-200">
 					<div class="text-center p-2 mr-0 md:mr-1">
 						<img src="https://picsum.photos/900/400" alt="">
 						<h1 class="text-3xl font-merriWeather py-2 hidden md:block px-16">Jornada Notarial 2021:
@@ -284,7 +285,8 @@
 							<p class="text-sm font-workSans my-2"><strong>en Méx</strong>ico</p>
 						</div>
 						<div class="p-2">
-							<h1 class="text-sm font-merriWeather py-2">Conoce dos diferentes vehículos de inversión que
+							<h1 class="text-sm font-merriWeather py-2">Conoce dos diferentes vehículos de inversión
+								que
 								han ganado mucha popu-
 								laridad en los mercados financieros: los
 								Futuros y...
@@ -473,7 +475,7 @@
 			<div class="-mt-7 float-right border-b-4 flex-1 border-purple-600 mb-2 md:block hidden">
 			</div>
 			<div class="border-b-2 border-purple-200 w-32 ml-2 mb-2 float-left md:hidden block"></div>
-			</div>
+		</div>
 	</section>
 	<section>
 		<div class="container mx-auto">
@@ -656,20 +658,20 @@
 						</h1>
 						<p class="text-sm font-workSans">Por <strong>Staff</strong> l marzo 24, 2021</p>
 						<p class="text-sm font-workSans my-2"><strong>en Méx</strong>ico</p>
+					</div>
+					<hr class="px-1">
+					<div class="md:hidden block">
+						<div class="p-2">
+							<h1 class="text-lg font-merriWeather py-2 text-gray-500">
+								Mercedes Benz suspenderá producción en Brasil por pandemia
+							</h1>
+							<p class="text-sm font-workSans">Por <strong>Staff</strong> l marzo 24, 2021</p>
+							<p class="text-sm font-workSans my-2"><strong>en Méx</strong>ico</p>
 						</div>
 						<hr class="px-1">
-						<div class="md:hidden block">
-							<div class="p-2">
-								<h1 class="text-lg font-merriWeather py-2 text-gray-500">
-									Mercedes Benz suspenderá producción en Brasil por pandemia
-								</h1>
-								<p class="text-sm font-workSans">Por <strong>Staff</strong> l marzo 24, 2021</p>
-								<p class="text-sm font-workSans my-2"><strong>en Méx</strong>ico</p>
-							</div>
-							<hr class="px-1">
-							<div class="p-2">
-								<h1 class="text-lg font-merriWeather py-2 text-gray-500">
-									Renault fabricará 3 modelos híbridos en España
+						<div class="p-2">
+							<h1 class="text-lg font-merriWeather py-2 text-gray-500">
+								Renault fabricará 3 modelos híbridos en España
 							</h1>
 							<p class="text-sm font-workSans">Por <strong>Staff</strong> l marzo 24, 2021</p>
 							<p class="text-sm font-workSans my-2"><strong>en Méx</strong>ico</p>
@@ -965,7 +967,8 @@
 				<div class="border-none md:border-r-2 border-gray-100">
 					<div class="text-center p-2 mr-0 md:mr-1">
 						<img src="https://picsum.photos/900/500" alt="">
-						<h1 class="md:text-3xl text-base font-merriWeather py-2 md:px-16">AMLO elogia modelo económico de Bolivia con
+						<h1 class="md:text-3xl text-base font-merriWeather py-2 md:px-16">AMLO elogia modelo económico
+							de Bolivia con
 							Evo Morales
 						</h1>
 						<p class="text-sm font-workSans">Por <strong>Staff</strong> l marzo 24, 2021</p>
@@ -1142,7 +1145,8 @@
 						<div class="md:border-l-2 border-none md:ml-2 ml-0 border-gray-100">
 							<div class="text-center p-2 mr-0 md:mr-1">
 								<img src="https://picsum.photos/900/500" alt="">
-								<h1 class="md:text-3xl text-sm font-merriWeather py-2 px-0 md:px-12">México, de nuevo fuera de las 25
+								<h1 class="md:text-3xl text-sm font-merriWeather py-2 px-0 md:px-12">México, de nuevo
+									fuera de las 25
 									economías
 									más<br class="md:block hidden">
 									atractivas para invertir
