--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 				<span class="bg-white block h-px w-5"></span>
 			</div>
 			<div class="text-white mx-auto mt-2">
-				<h1 class="xl:ml-72 lg:ml-60 md:ml-48 ml-12 font-workSans text-2xl">LOGO</h1>
+				<h1 class="xl:ml-72 lg:ml-60 md:ml-48 ml-12 font-workSans text-xl lg:text-4xl">LOGO</h1>
 			</div>
 			<div class="ml-auto">
 				<a href="#"><i class="fas fa-search text-white mr-2"></i></a>
@@ -31,8 +31,8 @@
 		</div>
 	</header>
 	<nav>
-		<ul class="bg-gray-600 flex w-full md:w-1/2 mx-auto text-white p-2 md:rounded-bl-2xl md:rounded-br-2xl rounded-bl-none rounded-br-none justify-between px-0 md:px-6 text-xs md:text-base font-workSans uppercase"
-			style="font-size:10px">
+		<ul
+			class="bg-gray-600 flex w-full md:w-1/2 mx-auto text-white p-2 md:rounded-bl-2xl md:rounded-br-2xl rounded-bl-none rounded-br-none justify-between px-1 md:px-6 text-small md:text-base font-workSans uppercase">
 			<li><a href="#">Mexcio</a></li>
 			<li><a href="#">Colombia</a></li>
 			<li><a href="#">Peru</a></li>
@@ -49,29 +49,29 @@
 				<h1 class="w-1/2 bg-red-400 h-40 mx-auto"></h1>
 			</div>
 		</div>
-	</section>
+	</section>	
 	<!-- Hero Section -->
 	<section class="md:block hidden"">
 		<div class=" ml-16">
 		<h1>Edición en Español</h1>
 		</div>
 		<div class="mx-16 mt-3 mb-9">
-			<hr class="h-0.5 bg-gray-500" />
+			<hr class="h-0.5 bg-gray-200" />
 		</div>
 		<div class="container mx-auto">
 			<div class="lg:-ml-4 ml-4">
 				<span class="px-6 py-2 mt-4 bg-red-500 text-white">Breaking</span>
 			</div>
 			<div class="flex lg:-ml-6 ml-0">
-				<div class="h-28 lg:pr-2 pr-0.5 lg:m-2 m-1 border-r-2 flex items-center border-gray-400">
+				<div class="h-28 lg:pr-2 pr-0.5 lg:m-2 m-1 border-r-2 flex items-center border-gray-100">
 					<p class="text-xs">Dispositivos vanguardistas reconocidos por facilitar
 						nuestro estilo de vida</p>
 				</div>
-				<div class="h-28 lg:pr-2 pr-0.5 lg:m-2 m-1 border-r-2 flex items-center border-gray-400">
+				<div class="h-28 lg:pr-2 pr-0.5 lg:m-2 m-1 border-r-2 flex items-center border-gray-100">
 					<p class="text-xs">Alberto Ciurana, ejecutivo de TV Azteca,
 						muere de Covid-19</p>
 				</div>
-				<div class="h-28 lg:pr-2 pr-0.5 lg:m-2 m-1 border-r-2 flex items-center border-gray-400">
+				<div class="h-28 lg:pr-2 pr-0.5 lg:m-2 m-1 border-r-2 flex items-center border-gray-100">
 					<p class="text-xs">Slim va por recompra de acciones de América
 						Móvil con fondo de 25,000 mdp</p>
 				</div>
@@ -84,9 +84,12 @@
 
 	</section>
 	<!-- Slider -->
+	<!-- slider is in under-development -->
+	<!-- Slider -->
 	<section>
 		<div class="md:mx-16 mx-0 mt-3 mb-9">
-			<hr class="md:h-0.5 h-1 bg-gray-500" />
+			<h1 class="text-sm md:hidden block ml-2">Edición en Español</h1>
+			<hr class="md:h-0.5 h-1 bg-gray-200" />
 		</div>
 		<div class="container mx-auto lg:flex block">
 			<div class="lg:w-2/3 w-full">
@@ -97,13 +100,13 @@
 							ha
 							dado
 							la
-							mitad<br class="lg:block hidden"> de su
+							mitad<br class="md:hidden block"> de su
 							presupuesto
-							para<br class="lg:block hidden">
+							para<br>
 							vacunas como lo prometió</h1>
 						<p class="text-sm mt-2 font-workSans">Por <strong>Staff</strong> l marzo 24, 2021</p>
 						<p class="text-sm md:pb-16 pb-4 font-workSans my-2"><strong>en Méx</strong>ico</p>
-						<div class="text-base px-2 sm:hidden block font-merriWeather">AstraZeneca dice que se
+						<div class="text-sm px-2 sm:hidden block font-merriWeather">AstraZeneca dice que se
 							prepararía
 							para solicitar una
 							autorización de
@@ -140,7 +143,7 @@
 			</div>
 			<div class="w-full container mx-auto sm:hidden block">
 				<div class="flex justify-center">
-					<button class="px-6 py-2 bg-red-400 text-white font-merriWeather">Rotura</button>
+					<button class="lg:px-6 px-3 py-2 lg:py-2 bg-red-400 text-white font-merriWeather text-xs lg:text-base">Rotura</button>
 				</div>
 				<div>
 					<div>
@@ -148,7 +151,7 @@
 						<h1 class="font-merriWeather ml-2 text-sm">Estados unidos y la Unión Europea<br>
 							golpean a China con sanciones por el...</h1>
 					</div>
-					<div class="border-b-2 my-3 border-gray-300 h-1 w-11/12 mx-auto"></div>
+					<div class="border-b-2 my-3 border-gray-100 h-1 w-11/12 mx-auto"></div>
 				</div>
 				<div>
 					<div>
@@ -156,7 +159,7 @@
 						<h1 class="font-merriWeather ml-2 text-sm">La confianza europea en la inyección<br>
 							Covid-19 de AstraZeneca se desploma...</h1>
 					</div>
-					<div class="border-b-2 my-3 border-gray-300 h-1 w-11/12 mx-auto"></div>
+					<div class="border-b-2 my-3 border-gray-100 h-1 w-11/12 mx-auto"></div>
 				</div>
 				<div>
 					<div>
@@ -175,7 +178,7 @@
 					<div class="flex mt-10 p-4">
 						<img src="https://picsum.photos/100/80" class="md:p-4 p-1 h-1/2">
 						<div class="md:py-2 py-0 px-4">
-							<h1 class="md:text-xl text-base font-merriWeather">AMLO asegura que
+							<h1 class="lg:text-xl md:text-base text-sm font-merriWeather">AMLO asegura que
 								“todos” los mi-grantes en México
 								serán vacunados</h1>
 							<a href="#" class="text-xs"> Hace 6 horas</a>
@@ -184,7 +187,7 @@
 					<div class="flex p-4">
 						<img src="https://picsum.photos/100/80" class="md:p-4 p-1 h-1/2">
 						<div class="md:py-2 py-0 px-4">
-							<h1 class="md:text-xl text-base font-merriWeather">El príncipe Harry
+							<h1 class="lg:text-xl md:text-base text-sm font-merriWeather">El príncipe Harry
 								trabajará en una
 								startup de salud
 								mental</h1>
@@ -194,7 +197,7 @@
 					<div class="flex p-4">
 						<img src="https://picsum.photos/100/80" class="md:p-4 p-1 h-1/2">
 						<div class="md:py-2 py-0 px-4">
-							<h1 class="md:text-xl text-base font-merriWeather">Peso cae 1.15%;
+							<h1 class="lg:text-xl md:text-base text-sm font-merriWeather">Peso cae 1.15%;
 								BMV retrocede por
 								bajos precios del
 								petróleo</h1>
@@ -204,7 +207,7 @@
 					<div class="flex p-4">
 						<img src="https://picsum.photos/100/80" class="md:p-4 p-1 h-1/2">
 						<div class="md:py-2 py-0 px-4">
-							<h1 class="md:text-xl text-base font-merriWeather">Nuevo acuerdo entre México y la Unión
+							<h1 class="lg:text-xl md:text-base text-sm font-merriWeather">Nuevo acuerdo entre México y la Unión
 								Europea
 								estará
 								listo a fina-
@@ -247,15 +250,16 @@
 	<section class="container my-4 mx-auto">
 		<hr>
 		<div class="lg:flex block p-4">
-			<div>
+			<div class="mt-2">
 				<h1 class="text-gray-400 lg:block hidden text-center text-sm">REDES SOCIALES DE FORBES</h1>
 				<h1 class="text-gray-400 lg:hidden block font-bold text-center text-sm">FORBES SOCIALES DE </h1>
 			</div>
 			<div class="mx-auto my-2">
-				<p class="lg:text-xl text-base font-merriWeather text-gray-600 text-center">Alimentando tu pienso con
+				<p class="lg:text-xl text-base md:font-normal font-bold font-merriWeather text-gray-600 text-center">Alimentando tu
+					pienso con
 					exito.</p>
 			</div>
-			<div class="text-center">
+			<div class="text-center mt-2">
 				<i class="mx-4 text-gray-400 fa fa-facebook"></i>
 				<i class="mx-4 px-1.5 text-gray-400 fa fa-twitter"></i>
 				<i class="mx-4 px-1.5 text-gray-400 fa fa-instagram"></i>
@@ -270,9 +274,9 @@
 	<section class="mx-auto w-full bg-white">
 		<div class="py-4 flex items-end container mx-auto">
 			<div class="mr-3">
-				<h1 class="md:text-5xl text-2xl font-bold font-workSans lg:ml-2 ml-5 ">Dinero</h1>
+				<h1 class="md:text-5xl text-2xl font-bold font-workSans lg:ml-2 md:ml-5 ml-2">Dinero</h1>
 			</div>
-			<div class="lg:w-full w-2/3 bg-green-400 ml-14 lg:ml-0 md:h-1 h-0.5 mb-2"></div>
+			<div class="lg:w-full w-2/3 bg-green-400 md:ml-14 ml-0 lg:ml-0 md:h-1 h-0.5 mb-2"></div>
 		</div>
 	</section>
 	<!-- Dienro Section -->
@@ -423,9 +427,9 @@
 	<section>
 		<div class="py-4 flex items-end container mx-auto">
 			<div class="mr-3">
-				<h1 class="md:text-5xl text-2xl lg:ml-2 ml-4 font-bold font-workSans">Video</h1>
+				<h1 class="md:text-5xl text-2xl lg:ml-2 md:ml-4 ml-4 font-bold font-workSans">Video</h1>
 			</div>
-			<div class="w-full md:w-3/4 lg:w-2/3 bg-bluelight lg:ml-0 ml-2 md:ml-4 h-0.5 md:h-1 mb-2"></div>
+			<div class="lg:w-full w-2/3 bg-bluelight lg:ml-0 ml-0 md:ml-4 h-0.5 md:h-1 mb-2"></div>
 		</div>
 	</section>
 	<section>
@@ -507,8 +511,8 @@
 	<div class="w-full h-1.5 bg-amaranth sm:hidden block"></div>
 	<section>
 		<div class="py-4 flex items-end container mx-auto">
-			<h1 class="md:text-5xl text-2xl font-bold font-workSans lg:ml-0 ml-6 lg:mr-6">Estilo de Vida</h1>
-			<div class="-mt-7 float-right lg:h-1 h-0.5 w-32 md:w-80 lg:flex-1 ml-12 bg-amaranth mb-2"></div>
+			<h1 class="lg:text-5xl text-2xl font-bold font-workSans lg:ml-0 md:ml-6 ml-4 lg:mr-6">Estilo de Vida</h1>
+			<div class="-mt-7 float-right lg:h-1 h-0.5 w-20 md:w-80 lg:flex-1 ml-12 bg-amaranth mb-2"></div>
 		</div>
 	</section>
 	<section>
@@ -721,7 +725,7 @@
 					<hr class="mx-1">
 					<div class="md:hidden block">
 						<div class="p-2">
-							<h1 class="text-lg font-merriWeather py-2 text-gray-500">
+							<h1 class="text-lg font-merriWeather py-2">
 								Mercedes Benz suspenderá producción en Brasil por pandemia
 							</h1>
 							<p class="text-sm font-workSans">Por <strong>Staff</strong> l marzo 24, 2021</p>
@@ -945,21 +949,21 @@
 							<hr class="mx-1 my-2">
 							<div class="md:hidden block">
 								<div class="p-2">
-									<h1 class="text-sm font-merriWeather py-2 text-gray-500">
+									<h1 class="text-sm font-merriWeather py-2">
 										Telegram planta cara a Clubhouse con su chat de voz reforzado
 									</h1>
 									<p class="text-xs font-workSans">Por <strong>Staff</strong> l marzo 24, 2021</p>
 									<p class="text-xs font-workSans my-2"><strong>en Méx</strong>ico</p>
 								</div>
 								<div class="p-2">
-									<h1 class="text-sm font-merriWeather py-2 text-gray-500">
+									<h1 class="text-sm font-merriWeather py-2">
 										Nokia y TV Azteca concluyen prueba de 5G en transmisión de TV
 									</h1>
 									<p class="text-xs font-workSans">Por <strong>Staff</strong> l marzo 24, 2021</p>
 									<p class="text-xs font-workSans my-2"><strong>en Méx</strong>ico</p>
 								</div>
 								<div class="p-2">
-									<h1 class="text-sm font-merriWeather py-2 text-gray-500">
+									<h1 class="text-sm font-merriWeather py-2">
 										Nokia y TV Azteca concluyen prueba de 5G en transmisión de TV
 									</h1>
 									<p class="text-xs font-workSans">Por <strong>Staff</strong> l marzo 24, 2021</p>
@@ -1081,21 +1085,21 @@
 					<hr class="mr-1 md:block hidden">
 					<div class="md:hidden block">
 						<div class="p-2">
-							<h1 class="text-sm font-merriWeather py-2 text-gray-500">
+							<h1 class="text-sm font-merriWeather py-2">
 								México y EU discuten migración ordenada, segura y regular
 							</h1>
 							<p class="text-xs font-workSans">Por <strong>Staff</strong> l marzo 24, 2021</p>
 							<p class="text-xs font-workSans my-2"><strong>en Méx</strong>ico</p>
 						</div>
 						<div class="p-2">
-							<h1 class="text-sm font-merriWeather py-2 text-gray-500">
+							<h1 class="text-sm font-merriWeather py-2">
 								SCT borra queja de Arganis sobre inge- nieros militares y obras públicas
 							</h1>
 							<p class="text-xs font-workSans">Por <strong>Staff</strong> l marzo 24, 2021</p>
 							<p class="text-xs font-workSans my-2"><strong>en Méx</strong>ico</p>
 						</div>
 						<div class="p-2">
-							<h1 class="text-sm font-merriWeather py-2 text-gray-500">
+							<h1 class="text-sm font-merriWeather py-2">
 								AMLO y gobernadores firman acuerdo para no interferir en elecciones
 							</h1>
 							<p class="text-xs font-workSans">Por <strong>Staff</strong> l marzo 24, 2021</p>
@@ -1226,7 +1230,7 @@
 	<section>
 		<div class="py-4 flex items-end container mx-auto">
 			<h1 class="md:text-5xl text-2xl font-bold font-workSans md:ml-0 ml-2 mr-4 md:mr-6">Economia y Finanzas</h1>
-			<div class="-mt-7 float-right h-0.5 w-10 md:flex-1 bg-chocolate-dark mb-2"></div>
+			<div class="-mt-7 float-right lg:h-1 h-0.5 w-10 md:flex-1 bg-chocolate-dark mb-2"></div>
 		</div>
 	</section>
 	<section>
@@ -1315,14 +1319,14 @@
 							<hr class="ml-1 md:block hidden">
 							<div class="md:hidden block">
 								<div class="p-2">
-									<h1 class="text-sm font-merriWeather py-2 text-gray-500">
+									<h1 class="text-sm font-merriWeather py-2">
 										SHCP prevé 300,000 mdp de ingresos adicionales con altos precios del petróleo
 									</h1>
 									<p class="text-xs font-workSans">Por <strong>Staff</strong> l marzo 24, 2021</p>
 									<p class="text-xs font-workSans my-2"><strong>en Méx</strong>ico</p>
 								</div>
 								<div class="p-2">
-									<h1 class="text-sm font-merriWeather py-2 text-gray-500">
+									<h1 class="text-sm font-merriWeather py-2">
 										Actividad económica de México se contrae 4% en febrero, estima Inegi
 									</h1>
 									<p class="text-xs font-workSans">Por <strong>Staff</strong> l marzo 24, 2021</p>
