--- a/src/about.html
+++ b/src/about.html
@@ -15,37 +15,58 @@
 
 <body>
 	<!-- Header Menu -->
-	<header class="bg-black p-2 h-16">
-		<div class="flex items-center">
-			<div>
-				<span class="bg-white block h-px mt-2 w-5"></span>
-				<span class="bg-white block h-px my-1 w-5"></span>
-				<span class="bg-white block h-px w-5"></span>
-			</div>
-			<div class="text-white w-full flex justify-center mt-2">
-				<h1 class="font-workSans text-xl lg:text-4xl">LOGO</h1>
-			</div>
-			<div>
-				<a href="#"><i class="fas fa-search text-white mr-2"></i></a>
-			</div>
+	<header class="flex bg-black items-center px-5">
+		<div>
+			<a href="#">
+				<span class="bg-white h-1 w-10 block"></span>
+				<span class="bg-white h-1 w-10 block my-1"></span>
+				<span class="bg-white h-1 w-10 block"></span>
+			</a>
+		</div>
+		<div class="w-full flex justify-center">
+			<h1 class="text-4xl uppercase text-white font-sans">logo</h1>
+		</div>
+		<div>
+			<a href="#">
+				<i class="fas fa-search text-white text-2xl"></i>
+			</a>
 		</div>
 	</header>
-	
+	<!--  -->
+	<nav class="flex justify-center z-50">
+		<ul
+			class="flex justify-evenly w-full text-white md:rounded-b-2xl xl:w-nav-width lg:w-1/2 md:w-2/3 pb-3 p-2 bg-gray-600">
+			<li>
+				<a href="#"
+					class="uppercase text-white font-workSans font-medium md:text-sm text-xss truncate cursor-pointer">mexico</a>
+			</li>
+			<li>
+				<a href="#"
+					class="uppercase text-white font-workSans font-medium md:text-sm text-xss truncate cursor-pointer">colombia</a>
+			</li>
+			<li>
+				<a href="#"
+					class="uppercase text-white font-workSans font-medium md:text-sm text-xss truncate cursor-pointer">peru</a>
+			</li>
+			<li>
+				<a href="#"
+					class="uppercase text-white font-workSans font-medium md:text-sm text-xss truncate cursor-pointer">chile</a>
+			</li>
+			<li>
+				<a href="#"
+					class="uppercase text-white font-workSans font-medium md:text-sm text-xss truncate cursor-pointer">centroamerica</a>
+			</li>
+			<li>
+				<a href="#"
+					class="uppercase text-white font-workSans font-medium md:text-sm text-xss truncate cursor-pointer">rep.
+					deminicana</a>
+			</li>
+		</ul>
+	</nav>
 	<!-- end of Header -->
-	<section>
+	<section class="-mt-20">
 		<div class="w-full bg-black h-auto lg:h-96">
-			<!-- <nav class="z-50">
-																																																																																																												<ul
-																																																																																																													class="bg-gray-600 flex w-full lg:w-2/3 md:w-2/3 mx-auto text-white py-2 md:rounded-b-2xl rounded-b-none justify-evenly text-xs lg:text-sm font-workSans uppercase md:px-0 px-2">
-																																																																																																													<li><a href="#">Mexcio</a></li>
-																																																																																																													<li><a href="#">Colombia</a></li>
-																																																																																																													<li><a href="#">Peru</a></li>
-																																																																																																													<li><a href="#">Chile</a></li>
-																																																																																																													<li><a href="#">Centroamerica</a></li>
-																																																																																																													<li><a href="#">REP. Dominicana</a></li>
-																																																																																																												</ul>
-																																																																																																											</nav> -->
-			<div class="lg:block hidden">
+			<div class="lg:block hidden pt-20">
 				<div class="text-center mt-6">
 					<h1 class="text-white font-workSans text-sm">ELECCIÓN DE LOS EDITORES
 					</h1>
@@ -115,7 +136,7 @@
 						Musk dijo que el bitcoin pagado a Tesla no se convertiría en moneda tradicional, pero dio pocos
 						detalles sobre
 						cómo se
-						procesarían los<br> pagos. La compañía está usando un “software interno y de código abi-
+						procesarían los<br>pagos. La compañía está usando un “software interno y de código abi-
 						erto”,
 						dijo.
 					</p>
@@ -220,6 +241,6 @@
 		</div>
 	</footer>
 	<script src="https://kit.fontawesome.com/ede2fe071e.js" crossorigin="anonymous"></script>
-	</body>
-	
-	</html>
+</body>
+
+</html>
