--- a/src/page5.html
+++ b/src/page5.html
@@ -68,9 +68,9 @@
 	<!--  -->
 	<section class="container mx-auto">
 		<div class="md:flex block">
-			<div class="md:w-2/3 w-full">
+			<div class="lg:w-2/3 w-full">
 				<div class="lg:px-16 px-8">
-					<div class="md:-ml-24 ml-0">
+					<div class="lg:-ml-24 ml-0">
 						<div class="text-center text-base font-sans my-10">
 							<h1>ELECCIÓN DE LOS EDITORES</h1>
 						</div>
@@ -113,10 +113,10 @@
 						<img src="https://picsum.photos/780/360" alt="">
 					</div>
 					<div class="lg:-ml-12 lg:mr-14 ml-0 mr-0 mt-4">
-						<p class="text-sm lg:text-lg py-4 font-merriWeather">
+						<p class="text-sm sm:text-base md:text-lg py-4 font-merriWeather">
 							Cómo cancelar sus préstamos estudiantiles
 						</p>
-						<p class="text-sm lg:text-lg py-4 font-merriWeather">
+						<p class="text-sm sm:text-base lg:text-lg py-4 font-merriWeather">
 							Si no es uno de los 72,000 prestatarios de préstamos para estudiantes, pero compartió una
 							experiencia similar con su
 							colegio o universidad, es posible que pueda obtener la cancelación de sus préstamos
@@ -125,22 +125,22 @@
 							es cómo:
 
 						</p>
-						<p class="text-sm lg:text-lg mt-4 font-merriWeather">
+						<p class="text-sm sm:text-base md:text-lg mt-4 font-merriWeather">
 							MÁS PARA TI
 						</p>
-						<p class="text-sm lg:text-lg font-merriWeather mb-4">
+						<p class="text-sm sm:text-base md:text-lg font-merriWeather mb-4">
 							Después de que Biden cancele $ 1 mil millones en préstamos para estudi- antes, 3 posibles
 							próximos pasos para la
 							condonación de préstamos para estudiantes
 						</p>
-						<p class="text-sm lg:text-lg py-4 font-merriWeather">
+						<p class="text-sm sm:text-base md:text-lg py-4 font-merriWeather">
 							3 razones por las que Biden excluyó la exención de préstamos para estudiantes del
 							estímulo y lo que significa para
 							los prestatarios
 							Estados Unidos reacciona a la cancelación de préstamos estudiantiles por mil millones de
 							dólares
 						</p>
-						<p class="text-sm lg:text-lg py-4 font-merriWeather">
+						<p class="text-sm sm:text-base md:text-lg py-4 font-merriWeather">
 							Complete la defensa del prestatario para la solicitud de reembolso . Demuestre el daño
 							monetario. Pedir prestado un
 							préstamo estudiantil para asistir al programa, por sí solo, no es suficiente para
@@ -149,7 +149,7 @@
 							su programa académico con
 							los ingresos de los graduados de programas comparables para determinar el daño monetario.
 						</p>
-						<p class="text-sm lg:text-lg py-4 font-merriWeather">
+						<p class="text-sm sm:text-base md:text-lg py-4 font-merriWeather">
 							Proporcione cualquier documentación de respaldo.
 							Firma la certificación
 							Elegible para la cancelación de préstamos estudiantiles
@@ -166,35 +166,35 @@
 
 							</div>
 						</div>
-						<p class="text-sm lg:text-lg font-merriWeather">su escuela lo engañó para que se inscribiera;
+						<p class="text-sm sm:text-base md:text-lg font-merriWeather">su escuela lo engañó para que se inscribiera;
 						</p>
-						<p class="text-sm lg:text-lg font-merriWeather">su escuela lo engañó para que continuara
+						<p class="text-sm sm:text-base md:text-lg font-merriWeather">su escuela lo engañó para que continuara
 							inscribiéndose;
 						</p>
-						<p class="text-sm lg:text-lg font-merriWeather">su escuela lo engañó acerca de la selectividad
+						<p class="text-sm sm:text-base md:text-lg font-merriWeather">su escuela lo engañó acerca de la selectividad
 							de las
 							admisiones;
 						</p>
-						<p class="text-sm lg:text-lg font-merriWeather">su escuela lo engañó acerca de las
+						<p class="text-sm sm:text-base md:text-lg font-merriWeather">su escuela lo engañó acerca de las
 							clasificaciones de la
 							escuela;
 						</p>
-						<p class="text-sm lg:text-lg font-merriWeather">su escuela lo engañó acerca de la
+						<p class="text-sm sm:text-base md:text-lg font-merriWeather">su escuela lo engañó acerca de la
 							transferencia de
 							crédito; o
 						</p>
-						<p class="text-sm lg:text-lg font-merriWeather">su escuela lo engañó sobre la colocación
+						<p class="text-sm sm:text-base md:text-lg font-merriWeather">su escuela lo engañó sobre la colocación
 							laboral o los
 							posibles
 							resultados de ingresos.</p>
 
-						<p class="text-sm lg:text-lg py-4 font-merriWeather">
+						<p class="text-sm sm:text-base md:text-lg py-4 font-merriWeather">
 							No es elegible para la cancelación de préstamos estudiantiles
 							Los siguientes son ejemplos que no harán que sus préstamos estudian- tiles se cancelen
 							bajo la defensa del prestatario
 							para su reembolso:
 						</p>
-						<p class="text-sm lg:text-lg py-4 font-merriWeather">
+						<p class="text-sm sm:text-base md:text-lg py-4 font-merriWeather">
 							no le gustó la escuela o el programa;
 							descontento con el rendimiento académico o las calificaciones recibidas; incapaz de
 							asegurar la vivienda en el campus;
