--- a/src/page5.html
+++ b/src/page5.html
@@ -65,7 +65,7 @@
 	</nav>
 
 
-	<!--  -->
+	<!-- Main Section -->
 	<section class="container mx-auto">
 		<div class="md:flex block">
 			<div class="lg:w-2/3 w-full">
@@ -123,7 +123,7 @@
 							federales para estudiantes bajo la
 							defensa del prestatario para la condonación del pago de préstamos para estudiantes. Así
 							es cómo:
-
+						
 						</p>
 						<p class="text-sm sm:text-base md:text-lg mt-4 font-merriWeather">
 							MÁS PARA TI
@@ -213,7 +213,7 @@
 							nuevo paquete de estímulo, el Plan de Rescate Estadounidense de 2021, hace que la
 							condonación de préstamos
 							estudiantiles a través de pagos basados en los ingresos esté libre de impuestos hasta el
-							31 de diciembre de 2025.
+							31 de diciembre de 2025.							
 						</p>
 					</div>
 					<div class="lg:flex hidden items-start -ml-12 mr-16 my-12">
