--- a/src/page3.html
+++ b/src/page3.html
@@ -112,7 +112,8 @@
 							<div class="h-0.5 bg-gray-500 w-full my-3"></div>
 							<p class="font-merriWeather text-gray-400 md:text-sm text-xs">
 								Presidente VTEX.Ingeniero financiero, experto en comercio
-								electrónico y retail, coin más de 10 años de <span class="md:inline hidden">experiencia liderando la
+								electrónico y retail, coin más de 10 años de <span
+									class="md:inline hidden">experiencia liderando la
 									creación
 									y expansión de marcas existosas, tanti físicas como digitales</span>
 							</p>
