--- a/src/page5.html
+++ b/src/page5.html
@@ -162,9 +162,7 @@
 							<div>
 								<h1 class="text-gray-300 text-center uppercase text-xs my-2">Advertisement</h1>
 							</div>
-							<div class="w-full h-96 bg-red-400">
-
-							</div>
+							<div class="w-full h-96 bg-red-400"></div>
 						</div>
 						<p class="text-sm sm:text-base md:text-lg font-merriWeather">su escuela lo engañó para que se inscribiera;
 						</p>
